--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MONGO_URL='sua-url-do-mongo'
 NODE_ENV='development'
 LOG_LEVEL='debug'
 JWT_SECRET_KEY= 'segredo-jwt'
+COIN_MARKETCAP_KEY='SEGREDO_KEY'
+COIN_MARKETCAP_URL='https://pro-api.coinmarketcap.com
+
