--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.0.1",
     "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.1",
