--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ NODE_ENV='development'
 LOG_LEVEL='debug'
 JWT_SECRET_KEY= 'segredo-jwt'
 COIN_MARKETCAP_KEY='SEGREDO_KEY'
-COIN_MARKETCAP_URL='https://pro-api.coinmarketcap.com
+COIN_MARKETCAP_URL='https://pro-api.coinmarketcap.com'
+REDIS_URL='sua-url-do-redis'
+
 
