--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.0.1",
+    "bull": "^4.16.5",
     "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
