--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^6.5.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.8.1"
   },
   "devDependencies": {
