Aula 3: Configurando envio de emails na nossa aplicação

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ JWT_SECRET_KEY= 'segredo-jwt'
 COIN_MARKETCAP_KEY='SEGREDO_KEY'
 COIN_MARKETCAP_URL='https://pro-api.coinmarketcap.com'
 REDIS_URL='sua-url-do-redis'
+EMAIL_HOST='url-smtp'
+EMAIL_PORT='porta-smtp'
 
 
