--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.3",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "swagger-jsdoc": "^6.2.8",
@@ -27,6 +28,7 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "maildev": "^2.2.1",
     "nodemon": "^2.0.19"
   }
 }
