--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ COIN_MARKETCAP_URL='https://pro-api.coinmarketcap.com'
 REDIS_URL='sua-url-do-redis'
 EMAIL_HOST='url-smtp'
 EMAIL_PORT='porta-smtp'
+URL_DA_CRYPTOTRADE='url-para-aplicacao'
+
 
 
