--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cpf-cnpj-validator": "^1.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.10",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
