--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.3",
     "nodemailer": "^6.10.0",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qr-image": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.8.1"
