--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon ./app.js",
-    "seed": "node ./seed"
+    "seed": "node ./seed",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "maildev": "^2.2.1",
     "nodemon": "^2.0.19"
   }
