--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.7.0",
     "maildev": "^2.2.1",
     "mongodb-memory-server": "^10.1.4",
+    "nock": "^14.0.2",
     "nodemon": "^2.0.19",
     "supertest": "^7.1.0"
   }
