--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "faker-br": "^0.4.1",
     "jest": "^29.7.0",
     "maildev": "^2.2.1",
     "mongodb-memory-server": "^10.1.4",
